Closed
Bug 76601
Opened 24 years ago
Closed 17 years ago
remove extra str copy in nsMsgMailNewsUrl::SchemeIs() when #73845 is fixed
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9
People
(Reporter: sspitzer, Assigned: standard8)
References
Details
Attachments
(1 file)
|
984 bytes,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
tracker bug to remove extra str copy in nsMsgMailNewsUrl::SchemeIs() when #73845
is fixed
OS: Windows NT → All
QA Contact: esther → stephend
Hardware: PC → All
Updated•21 years ago
|
Product: MailNews → Core
Comment 2•19 years ago
|
||
str copy can be removed now that bug 73845 is fixed?
Assignee: sspitzer → nobody
QA Contact: stephend → backend
Updated•17 years ago
|
Severity: normal → minor
| Assignee | ||
Comment 3•17 years ago
|
||
So bug 73845 was fixed ages ago. Looking at nsStandardURL (which is what m_baseURL is):
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/netwerk/base/src/nsStandardURL.cpp&rev=1.110&mark=623-635,1586-1592#623
the second bit is SchemeIs, the first bit is SegmentIs called from SchemeIs. Looks like that is set up to handle null/invalid options correctly, so let's just remove the unnecessary check for length and call the nsStandardURL.
Assignee: nobody → bugzilla
Status: NEW → ASSIGNED
Attachment #323402 -
Flags: superreview?(bienvenu)
Attachment #323402 -
Flags: review?(bienvenu)
Updated•17 years ago
|
Attachment #323402 -
Flags: superreview?(bienvenu)
Attachment #323402 -
Flags: superreview+
Attachment #323402 -
Flags: review?(bienvenu)
Attachment #323402 -
Flags: review+
| Assignee | ||
Comment 4•17 years ago
|
||
Patch checked in -> fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•