Bug 76601 remove extra str copy in nsMsgMailNewsUrl::SchemeIs() when #73845 is fixed (remove unnecessary check). r/sr=bienvenu